# PacketRusher

./: .gitignore  .gitmodules  CITATION.cff  CONTRIBUTING.md  DCO.md  FIX_SUMMARY.md  LICENSE  MAINTAINERS.md  Makefile  README.md  TROUBLESHOOTING.md  USAGE.md  app.sh  go.mod  go.sum  main.go  script.sh  ue.sh
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request.md
.github/workflows/: ci-workflow.yml  codacy.yml  golangci-lint.yml
cmd/: app.go  gnb.go  main.go  multiUePdu.go  packetrusher.go  root.go  singleUePdu.go  ue.go
config/: config.go  config.yaml  config.yml  ipv4-port.go
dev/: .gitignore  include_ues.sh
docker/: Dockerfile  README.md  config.yml  docker-compose.yml  entrypoint.sh
docs/: RHEL9Install.md
internal/: example.go
internal/control-test-engine/: registration-gnb.go  registration-ue.go
internal/control_test_engine/: imsi_generator.go  registration-gnb.go  (+1 more)
multipleUes/: multipleUEs.go  registration.go
poc/packetRusherNg/: .gitignore  Cargo.toml  nas_generated.rs
poc/packetRusherNg/ngap/: NGAP-CommonDataTypes.asn  NGAP-Constants.asn  NGAP-Containers.asn  NGAP-IEs.asn  NGAP-PDU-Contents.asn  NGAP-PDU-Descriptions.asn
poc/packetRusherNg/src/: gnb.rs  main.rs  ngap.rs  ngsetuprequest.rs
scenarios/: sample.go.wasm
src/: example.go  registration.go  tests.go
test/: concurrent_fixes_test.go  decode.go  mongodb.go  packet.go  pr_test.go  ranUe.go  registration_test.go  security.go  ueState.go
ue/: registration.go  ue.go
(+1619 files in other folders)
